--- a/index.html
+++ b/index.html
@@ -2,3 +2,9 @@
 <html lang="en">
 
 </html>
+<meta charset="utf-8">
+<title>The HTML5 Heraid</title>
+<meta name="description"content="The HTML5 Herald"
+<meta name="Gudvin00711"content=SitePoint">
+
+<link rel="stylesheet" href="css/styles.css?v=1.0"> 
