--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
 <meta name="Gudvin00711"content=SitePoint">
 
 <link rel="stylesheet" href="css/styles.css?v=1.0"> 
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"><script>
+<![endif]-->
