feat: update file index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    	</section>
 	    	<figure class="figure--right-side">
 	    		<img 
-	    		src="img/avatar.jpg"
+	    		src="avatar.jpg"
 	    		width="320"
 	    		height="650"
 	    		class="photo"
@@ -74,7 +74,7 @@
       <p class="footer__year">2022</p>
       <a class="footer__rsschool" href="https://rs.school/js/" target="_blank">
         <img
-          src="img/rs_school_js.svg"
+          src="rs_school_js.svg"
           width="86"
           height="32"
           alt="RS School"
