feat: update index.html file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
-</head>
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sviatlana Chernik</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" type=">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page-body">
 	<header>
@@ -21,7 +21,7 @@
 	</header>
 	    <div class="rich-side">
 	    	<section class="page-title">
-	    		<h1 class="man-title">Sviatlana <br />Chernik</h1>
+	    		<h1 class="man-title">Sviatlana <br>Chernik</h1>
 	    		<p>Front-end developer stage 0</p>
 	    	</section>
 	    	<figure class="figure--right-side">
@@ -31,7 +31,7 @@
 	    		height="650"
 	    		class="photo"
 	    		alt="Photo of Sviatlana Chernik"
-	    		/>
+	    		>
 	    	</figure>
 	    	<section class="about-me" id="about-me">
 	    		<h2 class="section-title">About me</h2>
@@ -50,7 +50,7 @@
             	</ul>
             </section>
             <section class="contact"  id="contact">
-	        <h2 class="section-title">Contact</section></h2>
+	        <h2 class="section-title">Contact</h2>
 	        <ul class="contakt_list">
 	        	<li class="contact_item">
 	        		Email: <br>
@@ -59,16 +59,15 @@
 	        	<li class="contact_item">
 	        		Discord: Sviatlana Chernik (Gudvin00711)#2769
 	        	</li>
-	        	<li lass="contact_item">
+	        	<li сlass="contact_item">
 	        		Adress:<br />
 	        		<span>Szczecin, Poland</span>
 	        	</li>
 	        </ul>
 	    </section>
 	</div>
-	</main>
     <footer class="footer">
-      <a class="footer__github" href="https://github.com/petr9ra" target="_blank">
+      <a class="footer__github" href="https://github.com/Gudvin00711" target="_blank">
         My GitHub
       </a>
       <p class="footer__year">2022</p>
@@ -78,7 +77,7 @@
           width="86"
           height="32"
           alt="RS School"
-        />
+        >
       </a>
     </footer>
     <script src="rainbow-custom.min.js"></script>
