feat: update index.html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Sviatlana Chernik</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" type=">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="page-body">
 	<header>
@@ -19,20 +19,23 @@
 			</ul>
 		</nav>
 	</header>
-	    <div class="rich-side">
+	<main class="container">
+		<div class="left-side">
+			<figure class="figure--left-side">
+	    		<img
+				src="avatar.jpg"
+				width="300"
+				height="590"
+				class="photo"
+				alt="Photo of Sviatlana Chernik"
+				>
+			</figure>	
+		</div>
+	    <div class="right-side">
 	    	<section class="page-title">
-	    		<h1 class="man-title">Sviatlana <br>Chernik</h1>
+		        <h1 class="man-title">Sviatlana<br>Chernik</h1>
 	    		<p>Front-end developer stage 0</p>
-	    	</section>
-	    	<figure class="figure--right-side">
-	    		<img 
-	    		src="avatar.jpg"
-	    		width="320"
-	    		height="650"
-	    		class="photo"
-	    		alt="Photo of Sviatlana Chernik"
-	    		>
-	    	</figure>
+	    	</section>	    	
 	    	<section class="about-me" id="about-me">
 	    		<h2 class="section-title">About me</h2>
 	    		<p>
