--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="en">
-<head>
+<head> 
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sviatlana Chernik</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" type=">
+    <!--<link rel="stylesheet" type="> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="page-body">
@@ -33,57 +33,58 @@
 		</div>
 	    <div class="right-side">
 	    	<section class="page-title">
-		        <h1 class="man-title">Sviatlana<br>Chernik</h1>
+	    		<h1 class="man-title">Sviatlana<br>Chernik</h1>
 	    		<p>Front-end developer stage 0</p>
 	    	</section>	    	
-	    	<section class="about-me" id="about-me">
-	    		<h2 class="section-title">About me</h2>
-	    		<p>
-	    			I like to study and learn something new. I like to read books,cycling travel. I lead active and healhy lifestyle. I like to work and see the results of my work.<br />
-                    I can build, configure, solve problems with computers.
-                </p>
-            </section>
-            <section class="skills" id="skills">
-            	<h2 class="section-title">Skills</h2>
-            	<ul class="skils_list">
-            		<li>Figma, Git</li>
-            		<li>HTML/HTMLS, GSS</li>
-            		<li>LavaScript</li>
-            		<li>English B1</li>
-            	</ul>
-            </section>
-            <section class="contact"  id="contact">
-	        <h2 class="section-title">Contact</h2>
-	        <ul class="contakt_list">
-	        	<li class="contact_item">
-	        		Email: <br>
-	        		<a href="mailto:gudvin00711@gmail.com">gudvin00711@gmail.com</a>
-	        	</li>
-	        	<li class="contact_item">
-	        		Discord: Sviatlana Chernik (Gudvin00711)#2769
-	        	</li>
-	        	<li сlass="contact_item">
-	        		Adress:<br />
-	        		<span>Szczecin, Poland</span>
-	        	</li>
-	        </ul>
-	    </section>
-	</div>
-    <footer class="footer">
-      <a class="footer__github" href="https://github.com/Gudvin00711" target="_blank">
-        My GitHub
-      </a>
-      <p class="footer__year">2022</p>
-      <a class="footer__rsschool" href="https://rs.school/js/" target="_blank">
-        <img
-          src="rs_school_js.svg"
-          width="86"
-          height="32"
-          alt="RS School"
-        >
-      </a>
-    </footer>
-    <script src="rainbow-custom.min.js"></script>
-    <script src="script.js"></script>
+			<section class="about-me" id="about-me">
+				<h2 class="section-title">About me</h2>
+				<p>
+					I like to study and learn something new. I like to read books,cycling travel. I lead active and healhy lifestyle. I like to work and see the results of my work.<br>
+					I can build, configure, solve problems with computers.
+				</p>
+			</section>
+			<section class="skills" id="skills">
+				<h2 class="section-title">Skills</h2>
+				<ul class="skils_list">
+					<li>Figma, Git</li>
+					<li>HTML/HTMLS, GSS</li>
+					<li>LavaScript</li>
+					<li>English B1</li>
+				</ul>
+			</section>
+			<section class="contact"  id="contact">
+			<h2 class="section-title">Contact</h2>
+			<ul class="contact_list">
+				<li class="contact_item">
+					Email: <br>
+					<a href="mailto:gudvin00711@gmail.com">gudvin00711@gmail.com</a>
+				</li>
+				<li class="contact_item">
+					Discord: Sviatlana Chernik (Gudvin00711)#2769
+				</li>
+				<li class="contact_item">
+					Adress:<br>
+					<span>Szczecin, Poland</span>
+				</li>
+			</ul>
+			</section>
+		</div>
+	</main>
+	<footer class="footer">
+		<a class="footer__github" href="https://github.com/gudvin00711" target="_blank">
+		My GitHub
+		</a>
+		<p class="footer__year">2022</p>
+		<a class="footer__rsschool" href="https://rs.school/js/" target="_blank">
+		<img
+		src="rs_school_js.svg"
+		width="86"
+		height="32"
+		alt="RS School"
+		>
+		</a>
+	</footer>
+	<script src="rainbow-custom.min.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
