feat: update index.html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sviatlana Chernik</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!--<link rel="stylesheet" type="> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="page-body">
@@ -71,7 +70,7 @@
 		</div>
 	</main>
 	<footer class="footer">
-		<a class="footer__github" href="https://github.com/gudvin00711" target="_blank">
+		<a class="footer__github" href="https://github.com/Gudvin00711" target="_blank">
 		My GitHub
 		</a>
 		<p class="footer__year">2022</p>
