--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 <title>Sviatlana Chernik</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" type=">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" a href="style.css">
 </head>
 <body class="page-body">
 	<header>
 		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item"><a href="#about-me">About me</a></li>
+				<button>About me</button>
 				<li class="nav__item"><a href="#skills">Skills</a></li>
+				<button>Skills</button>
 				<li class="nav__item"><a href="#contact">Contact</a></li>
+				<button>Contact</button>
+				<li class="nav_item"><a href="projects">Projects</a></li>
+				<button>Projects</button>
 			</ul>
 		</nav>
+
 	</header>
 	<main class="container">
 		<div class="left-side">
@@ -27,8 +33,7 @@
 				width="300"
 				height="590"
 				class="photo"
-				alt="Photo of Sviatlana Chernik"
-				>
+				alt="Photo of Sviatlana Chernik">
 			</figure>	
 		</div>
 	    <div class="right-side">
@@ -39,7 +44,7 @@
 	    	<section class="about-me" id="about-me">
 	    		<h2 class="section-title">About me</h2>
 	    		<p>
-	    			I like to study and learn something new. I like to read books,cycling travel. I lead active and healhy lifestyle. I like to work and see the results of my work.<br />
+	    			I like to study and learn something new. I like to read books,cycling travel. I lead active and healhy lifestyle. I like to work and see the results of my work.<br>
                     I can build, configure, solve problems with computers.
                 </p>
             </section>
@@ -48,8 +53,9 @@
             	<ul class="skils_list">
             		<li>Figma, Git</li>
             		<li>HTML/HTMLS, GSS</li>
-            		<li>LavaScript</li>
+            		<li>JavaScript</li>
             		<li>English B1</li>
+            		<li>Plants</li>
             	</ul>
             </section>
             <section class="contact"  id="contact">
